--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -9,7 +9,8 @@ env:
   LOCATION: eastus
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: 84610d67-25d0-4d49-9bd1-58f6a42cc436
-  WEBAPP-NAME: az400-webapp-ferv2
+  WEBAPP-NAME: az400-webapp-fer
+
 
 jobs:
   #Build, test and publish .net web project in repository
